---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Changes:
    - The mod now uses built-in tooltips wherever possible. (#11)
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 2023-04-29
  Changes:
    - Made the double-click detection window 20 ticks (up from 12) to match the base game
  Bugfixes:
    - Fixed being unable to queue level-0 technologies (#8)
    - Fixed a crash when alt+clicking certain technology effects to open in Recipe Book (#10)
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 2023-03-26
  Bugfixes:
    - Fixed that fractional research unit counts would be displayed with too much precision (#6)
    - Fixed that lower levels of a multi-level tech would not be moved when queuing to the front
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2023-03-20
  Bugfixes:
    - Fixed that tooltips would not update the cost of technologies (#4)
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2023-03-10
  Bugfixes:
    - Fixed that technologies could be insta-researched when in the Space Exploration navsat view
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2023-03-09
  Bugfixes:
    - Fixed that hidden technologies would be visible when researched (#1)
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2023-01-30
  Bugfixes:
    - Fixed that technology slot tooltips would only show the base unit count for multilevel techs
    - Fixed that the GUI would not refresh if the player's force is changed