@@ -3,6 +3,8 @@ Version: 1.1.0
 Date: ????
   Changes:
     - The mod now uses built-in tooltips wherever possible. (#11)
+  Bugfixes:
+    - Fixed a crash when a force is removed during migrations. (#16)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.12
 Date: 2023-04-29
